@@ -1,3 +1,5 @@
+//@ skip
+
 function test(actual, expected) {
     if (actual !== expected)
         throw new Error("bad value: " + actual);
